# Oceanography-

./: .gitignore  README.md  pyproject.toml
agents/: __init__.py  base_agent.py  design_agent.py  operations_agent.py  optimization_agent.py  orchestrator.py  simulation_agent.py
config/: settings.py
data/: __init__.py
data/oceanographic/: __init__.py  data_fetcher.py
data/sensors/: __init__.py  sensor_data.py
models/: __init__.py
models/mechanical/: __init__.py  auv.py  monitoring_buoy.py  offshore_platform.py  wave_energy_converter.py
models/ocean/: __init__.py  ocean_environment.py  wave_model.py
simulation/: __init__.py  engine.py  scenarios.py
tests/: test_agents.py  test_models.py  test_simulation.py
