[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanmech-agent"
version = "0.1.0"
description = "Modular research platform integrating mechanical engineering, oceanographic data, and agentic AI for marine systems."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["oceanography", "mechanical-engineering", "autonomous-agents", "AUV", "wave-energy"]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "models*", "data*", "simulation*", "config*"]
